# amazon-kendra-langchain-extensions

./: .gitignore  README.md  pyproject.toml  requirements.txt
aws_langchain/: __init__.py  kendra.py  kendra_index_retriever.py  kendra_results.py
backend/: main.py
kendra_retriever_samples/: README.md  __init__.py  app.py  environment.yml  genai-kendra-langchain.ipynb  kendra-docs-index.yaml  kendra_chat_anthropic.py  kendra_chat_bedrock.py  kendra_chat_bedrock_claude.py  kendra_chat_bedrock_claudev2.py  kendra_chat_bedrock_claudev3.py  kendra_chat_bedrock_jurassic_ultra.py  kendra_chat_bedrock_llama2.py  kendra_chat_bedrock_titan.py  kendra_chat_falcon_40b.py  kendra_chat_flan_xl.py  kendra_chat_flan_xxl.py  kendra_chat_llama_2.py  kendra_chat_llama_2_neuron.py  kendra_chat_open_ai.py  kendra_retriever_anthropic.py  kendra_retriever_bedrock_titan.py  kendra_retriever_falcon_40b.py  kendra_retriever_flan_xl.py  kendra_retriever_flan_xxl.py  kendra_retriever_open_ai.py  main.py  requirements.txt  skip_kernel_extension.py
kendra_retriever_samples/ja/: README.md  app.py  kendra_chat_bedrock_claude.py  kendra_chat_bedrock_claudev2.py  (+3 more)
samples/: __init__.py  app.py  genai-kendra-langchain.ipynb  kendra_chat_ai21.py  kendra_chat_anthropic.py  kendra_chat_bedrock.py  kendra_chat_falcon.py  kendra_chat_flan_xl.py  kendra_chat_flan_xl_nb.py  kendra_chat_flan_xxl.py  kendra_chat_open_ai.py  kendra_retriever_ai21.py  kendra_retriever_anthropic.py  kendra_retriever_flan_xl.py  kendra_retriever_flan_xxl.py  kendra_retriever_open_ai.py  pyproject.toml  skip_kernel_extension.py
